--- a/MiniChallenge/Base.lproj/Main.storyboard
+++ b/MiniChallenge/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="LVB-YS-i5n">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,13 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgMenu.png" highlightedImage="bgMenu.png" translatesAutoresizingMaskIntoConstraints="NO" id="kdo-TH-Ex2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgMenu.png" highlightedImage="bgMenu.png" translatesAutoresizingMaskIntoConstraints="NO" id="kdo-TH-Ex2">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7h-Dg-j4I">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7h-Dg-j4I">
                                 <rect key="frame" x="226" y="130" width="117" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="H4i-bZ-oe1"/>
+                                    <constraint firstAttribute="width" secondItem="h7h-Dg-j4I" secondAttribute="height" multiplier="39:20" id="Prd-bH-cjS"/>
+                                    <constraint firstAttribute="width" constant="117" id="tCZ-oL-g4O"/>
+                                </constraints>
                                 <state key="normal" image="botao.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -31,22 +37,25 @@
                                     <action selector="iniciaGame:" destination="LVB-YS-i5n" eventType="touchUpInside" id="3Ei-f3-H7a"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hQh-G6-aF0">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hQh-G6-aF0">
                                 <rect key="frame" x="190" y="71" width="189" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nome:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dk9-GA-MBl">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Nome:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dk9-GA-MBl">
                                 <rect key="frame" x="258" y="34" width="65" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGr-81-mu5">
+                            <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGr-81-mu5">
                                 <rect key="frame" x="43" y="20" width="49" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="aGr-81-mu5" secondAttribute="height" multiplier="49:45" id="Ai0-eY-Efq"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                 <state key="normal" image="botaoRanking.png"/>
                                 <connections>
@@ -55,6 +64,14 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kdo-TH-Ex2" firstAttribute="centerX" secondItem="h7h-Dg-j4I" secondAttribute="centerX" id="egA-cZ-OfD"/>
+                            <constraint firstItem="kdo-TH-Ex2" firstAttribute="centerY" secondItem="h7h-Dg-j4I" secondAttribute="centerY" id="fgk-sZ-Lra"/>
+                            <constraint firstItem="kdo-TH-Ex2" firstAttribute="top" secondItem="bdc-N1-crn" secondAttribute="top" id="g3v-nM-bYM"/>
+                            <constraint firstItem="kdo-TH-Ex2" firstAttribute="leading" secondItem="bdc-N1-crn" secondAttribute="leading" id="i6P-1O-VoU"/>
+                            <constraint firstItem="hQh-G6-aF0" firstAttribute="top" secondItem="dk9-GA-MBl" secondAttribute="bottom" constant="16" id="kEI-jw-pyo"/>
+                            <constraint firstItem="kdo-TH-Ex2" firstAttribute="centerX" secondItem="hQh-G6-aF0" secondAttribute="centerX" id="kts-zg-htx"/>
+                        </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
@@ -62,6 +79,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
+                        <outlet property="btnPlay" destination="h7h-Dg-j4I" id="hte-Wn-N3D"/>
                         <outlet property="btnRanking" destination="aGr-81-mu5" id="GFo-VG-Vef"/>
                         <outlet property="imgFundo" destination="kdo-TH-Ex2" id="LvK-Y1-AAW"/>
                         <outlet property="lblNome" destination="dk9-GA-MBl" id="lVx-Lo-byC"/>
