--- a/MiniChallenge/Base.lproj/Main.storyboard
+++ b/MiniChallenge/Base.lproj/Main.storyboard
@@ -17,16 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgMenuVu.png" highlightedImage="bgMenuVu.png" translatesAutoresizingMaskIntoConstraints="NO" id="kdo-TH-Ex2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgMenu.png" highlightedImage="bgMenuVu.png" translatesAutoresizingMaskIntoConstraints="NO" id="kdo-TH-Ex2">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7h-Dg-j4I">
                                 <rect key="frame" x="226" y="130" width="117" height="60"/>
-                                <state key="normal" image="botaoVu.png">
+                                <state key="normal" image="botao.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="selected" image="botaoVuHighlight.png"/>
-                                <state key="highlighted" image="botaoVuHighlight.png"/>
+                                <state key="selected" image="botaoHighlight.png"/>
+                                <state key="highlighted" image="botaoHighlight.png"/>
                                 <connections>
                                     <action selector="iniciaGame:" destination="LVB-YS-i5n" eventType="touchUpInside" id="3Ei-f3-H7a"/>
                                 </connections>
@@ -56,8 +56,8 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView appearanceType="aqua" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="p1Vu.png" translatesAutoresizingMaskIntoConstraints="NO" id="ixQ-He-I3g">
-                                <rect key="frame" x="20" y="175" width="170" height="75"/>
+                            <imageView appearanceType="aqua" userInteractionEnabled="NO" alpha="0.099999999999999686" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="p1Vu.png" translatesAutoresizingMaskIntoConstraints="NO" id="ixQ-He-I3g">
+                                <rect key="frame" x="0.0" y="275" width="48" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -83,10 +83,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bgMenu.png" width="568" height="320"/>
         <image name="bgMenuVu.png" width="1137" height="641"/>
+        <image name="botao.png" width="140" height="70"/>
+        <image name="botaoHighlight.png" width="140" height="70"/>
         <image name="botaoRankingVu.png" width="161" height="31"/>
-        <image name="botaoVu.png" width="140" height="56"/>
-        <image name="botaoVuHighlight.png" width="140" height="56"/>
         <image name="p1Vu.png" width="66" height="74"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
